<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SeeAllLostItemsActivity">
    <View
        android:id="@+id/idHeaderView"
        android:layout_width="413dp"
        android:layout_height="68dp"
        android:background="#177E89"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="VisualLintBounds" />

    <TextView
        android:id="@+id/idHeaderTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="40dp"
        android:ems="8"
        android:fontFamily="cursive"
        android:text="@string/textview"
        android:textAllCaps="false"
        android:textColor="#B0FE76"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Seek And You Shall Find" />

    <View
        android:id="@+id/idFooterView"
        android:layout_width="411dp"
        android:layout_height="72dp"
        android:background="#177E89"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/idFooterTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/github_com_returnmarcco"
        android:textColor="#B0FE76"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/idFooterView"
        app:layout_constraintTop_toTopOf="@+id/idFooterView"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/idLostAndFoundItemsHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/see_all_lost_items"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idHeaderView"
        tools:text="Lost And Found Items" />

    <Button
        android:id="@+id/idRemovePostBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:text="@string/remove"
        app:layout_constraintBottom_toTopOf="@+id/idFooterView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/idItemListRecyclerView"
        android:layout_width="188dp"
        android:layout_height="303dp"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idLostAndFoundItemsHeader" />

</androidx.constraintlayout.widget.ConstraintLayout>