<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PostLostItemFormActivity">

    <View
        android:id="@+id/idHeaderView"
        android:layout_width="413dp"
        android:layout_height="68dp"
        android:background="#177E89"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="VisualLintBounds" />

    <TextView
        android:id="@+id/idHeaderTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="40dp"
        android:ems="8"
        android:fontFamily="cursive"
        android:text="@string/textview"
        android:textAllCaps="false"
        android:textColor="#B0FE76"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Seek And You Shall Find" />

    <View
        android:id="@+id/idFooterView"
        android:layout_width="411dp"
        android:layout_height="72dp"
        android:background="#177E89"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/idFooterTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/github_com_returnmarcco"
        android:textColor="#B0FE76"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/idFooterView"
        app:layout_constraintTop_toTopOf="@+id/idFooterView"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:text="@string/post_lost_item_form"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idHeaderView"
        tools:ignore="Autofill,LabelFor,TouchTargetSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>